--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,10 @@ main header {
   height: 100px;
   background-color: bisque;
 }
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 10px;
+  text-align: center;
+}
